# python-project-lvl2

./: Makefile  README.md  pyproject.toml
.github/workflows/: CI.yml
gendiff/: diff.py  formator.py  generate_diff.py  get_difference.py  parsering.py  read_data.py
gendiff/formator/: formator.py  json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_diff.py  test_diff_json.py  test_diff_plain.py
